--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -11,7 +11,6 @@
     }
   },
   "routes": [
-    { "route": "/api/*", "allowedRoles": ["authenticated"] },
-    { "route": "/*",      "allowedRoles": ["authenticated"] }
+    { "route": "/api/*", "allowedRoles": ["authenticated"] }
   ]
 }
