--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.475.0",
+    "mssql": "^11.0.1",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
@@ -49,6 +50,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/mssql": "^9.1.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -56,4 +58,4 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
-} 
+}
